--- a/.github/workflows/tag-and-docker-build-and-push.yaml
+++ b/.github/workflows/tag-and-docker-build-and-push.yaml
@@ -33,7 +33,7 @@ jobs:
         id: bump-version-and-push-tag
         uses: anothrNick/github-tag-action@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
           WITH_V: true
           DEFAULT_BUMP: patch
       - name: Set up QEMU
