--- a/.github/workflows/pr-auto-assign.yaml
+++ b/.github/workflows/pr-auto-assign.yaml
@@ -6,8 +6,7 @@ on:
     types: [opened, edited, labeled, unlabeled]
 jobs:
   run:
-    runs-on:
-      group: custom-runners
+    runs-on: ubuntu-latest
     steps:
       - uses: wow-actions/auto-assign@v3
         with:
