--- a/.github/workflows/pr-auto-assign.yaml
+++ b/.github/workflows/pr-auto-assign.yaml
@@ -4,14 +4,16 @@ on:
     types: [opened, edited, labeled, unlabeled]
   pull_request:
     types: [opened, edited, labeled, unlabeled]
+env:
+  GITHUB_TOKEN: ${{ secrets.REPO_MANAGEMENT_TOKEN }}
+
 jobs:
   run:
-    runs-on:
-      group: custom-runners
+    runs-on: ubuntu-latest
     steps:
       - uses: wow-actions/auto-assign@v3
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
           reviewers: |
             apetrovYa
           skipKeywords: wip
